# synarius-dataviewer

./: .gitignore  DISCLAIMER.txt  README.md  pyproject.toml  synarius_dataviewer.spec
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
docs/developer/: diagnostics.rst
docs/requirements/: index.rst  overview.rst
scripts/: napari_minimal_example.py  simpy_minimal_example.py
src/synarius_apps_diagnostics/: core.py
src/synarius_dataviewer/: __init__.py  __main__.py  _version.py
src/synarius_dataviewer/app/: __init__.py  main_window.py  svg_icons.py  theme.py
src/synarius_dataviewer/io/: __init__.py  timeseries_io.py
src/synarius_dataviewer/widgets/: __init__.py  channel_sidebar.py  data_viewer.py  pixmap_scope.py
src/synarius_parawiz/: __main__.py
src/synarius_parawiz/app/: console_window.py  icon_utils.py  main_window.py  status_progress_widget.py  windows_app_id.py
src/synarius_parawiz/icons/breeze/: BREEZE_ICONS_NOTICE.txt
src/synariustools/: __init__.py
src/synariustools/tools/: __init__.py
src/synariustools/tools/calmapwidget/: __init__.py  data.py  edit_table.py  factory.py  widget.py
src/synariustools/tools/plotwidget/: __init__.py  channel_registry.py  datasource.py  factory.py  mime.py  modes.py  pixmap_scope.py  plot_theme.py  series_math.py  widget.py
tests/: test_smoke.py  test_timeseries_io.py
