[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synarius-apps"
version = "0.0.1"
description = "Synarius applications and shared tools (Dataviewer, synariustools plot widget; built on synarius-core)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Synarius Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
  # Core uses SQLAlchemy; declare here so a local PYTHONPATH + editable apps install still resolves it.
  "SQLAlchemy>=2.0.0",
  # ParametersRepository (synarius_core.parameters) needs DuckDB; pin here so synarius-apps venv always has it.
  "duckdb>=1.5.1",
  # Time-series loaders live in synarius_core.io (install core with .[timeseries] when using core alone).
  "synarius-core @ git+https://github.com/synarius-project/synarius-core.git@8aaf0632f95d1b99c427de4b8efc145f19944604",
  "PySide6>=6.5.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "asammdf>=7.0.0",
  "numpy>=1.24.0",
  # Calibration map / curve viewer (ParaWiz, future Studio embedding).
  "matplotlib>=3.8.0",
  "holoviews>=1.18.0",
]

[project.scripts]
synarius-dataviewer = "synarius_dataviewer.__main__:main"
synarius-parawiz = "synarius_parawiz.__main__:main"

[project.urls]
Homepage = "https://github.com/synarius-project/synarius-apps"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synarius_dataviewer*", "synarius_parawiz*", "synariustools*"]

# Non-Python assets must be declared or wheels/CI installs lack toolbar icons; Studio's bundled
# DataViewer then fails at runtime (FileNotFoundError) when opening the live plot widget.
# Same for ParaWiz / CalibrationMapWidget toolbar icons.
[tool.setuptools.package-data]
"synariustools.tools.plotwidget" = ["icons/**/*.svg"]
"synariustools.tools.calmapwidget" = ["icons/*.svg"]
"synarius_dataviewer.app" = ["icons/**/*.svg", "icons/**/*.png"]
"synarius_parawiz" = ["icons/breeze/*.svg", "icons/breeze/*.txt"]

[tool.pyright]
extraPaths = ["../synarius-core/src"]

[project.optional-dependencies]
dev = []
docs = [
  "sphinx",
  "sphinx-needs",
  "zerovm-sphinx-theme",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
